--- a/css/main.css
+++ b/css/main.css
@@ -14,43 +14,65 @@ body {
   position: relative;
 }
 
-.hero-section {
-  background-image: linear-gradient(rgba(54, 0, 0, 0.5), rgba(73, 20, 20, 0.5)), url("../assets/SandDune.png");
-  background-repeat: repeat;
-  background-repeat-x: no-repeat;
-  background-size: cover;
-  background-repeat-y: no-repeat;
+.hero-section .nav-bar {
   width: 100%;
+  height: 50px;
+  display: flex;
+  text-align: right;
+  padding: 40px 0;
 }
-.hero-section .flex-container {
-  padding-top: 100px;
-  padding-bottom: 180px;
-}
-.hero-section .brand-id {
-  width: auto;
-  text-align: center;
-  margin-bottom: 60px;
-}
-.hero-section .brand-id img {
-  height: 60px;
-}
-.hero-section .hero-content-container {
-  text-align: center;
-  flex-grow: 1;
-  color: #ffffff;
-}
-.hero-section .hero-content-container .brand-id-text {
-  font: 700 18px "Nunito", sans-serif;
-  letter-spacing: 0.7em;
+.hero-section .nav-bar .nav-links {
   vertical-align: middle;
-  margin-bottom: 100px;
-}
-.hero-section .hero-content-container .brand-id-content {
-  font: 300 42px "Nunito", sans-serif;
-  width: 60%;
+  width: 40%;
   margin: auto;
 }
+.hero-section .nav-bar .nav-links::after {
+  content: "";
+  clear: both;
+  display: block;
+}
+.hero-section .nav-bar .nav-links .link {
+  float: left;
+  width: 25%;
+}
+.hero-section .nav-bar .nav-links .link a {
+  text-decoration: none;
+  color: black;
+  font: 500 18px "Lato", sans-serif;
+}
+.hero-section .nav-bar .social-media {
+  vertical-align: middle;
+  margin: auto 0;
+}
+.hero-section .nav-bar .social-media::after {
+  content: "";
+  clear: both;
+  display: block;
+}
+.hero-section .nav-bar .social-media .social-media-link {
+  float: left;
+  width: 33.33%;
+  margin: auto;
+  padding-left: 20px;
+}
+.hero-section .nav-bar .social-media .social-media-link img {
+  height: 25px;
+}
 
+@keyframes scroll {
+  0% {
+    bottom: 25px;
+  }
+  25% {
+    bottom: 10px;
+  }
+  30% {
+    bottom: 10px;
+  }
+  100% {
+    bottom: 25px;
+  }
+}
 @media screen and (max-width: 900px) {
   .hero-section .hero-content-container .brand-id-content {
     width: 80%;
