--- a/css/main.scss
+++ b/css/main.scss
@@ -15,49 +15,128 @@ body{
 }
 
 .hero-section{
-    background-image: linear-gradient(rgba(54, 0, 0, 0.5), rgba(73, 20, 20, 0.5)), url("../assets/SandDune.png");
-    background-repeat: repeat;
-    background-repeat-x: no-repeat;
-    background-size: cover;
-    background-repeat-y: no-repeat;
-    width: 100%;
-    // height: 90vh;
-    
-    .flex-container{
-        padding-top: 100px;
-        padding-bottom: 180px;
-    }
 
-    .brand-id{
-        width: auto;
-        text-align: center;
-        margin-bottom: 60px;
-        img{
-            height: 60px;
-        }
-    }
-    
-    .hero-content-container{
-        text-align: center;
-        flex-grow: 1;
-        color: #ffffff;
 
-        .brand-id-text{
-            font: 700 18px 'Nunito', sans-serif;
-            letter-spacing: .7em;
+    .nav-bar{
+        width: 100%;
+        height: 50px;
+        display: flex;
+        text-align: right;
+        padding: 40px 0;
+
+        .nav-links{
             vertical-align: middle;
-            margin-bottom: 100px;
-        }
-
-        .brand-id-content{
-            font: 300 42px 'Nunito', sans-serif;
-            // padding: 0 270px;
-            width: 60%;
+            width: 40%;
             margin: auto;
+            &::after{
+                content: '';
+                clear: both;
+                display: block;
+            }
+            .link{
+                float: left;;
+                width: 25%;
+
+                a{
+                    text-decoration: none;
+                    color: black;
+                    font: 500 18px 'Lato', sans-serif;
+                }
+            }
         }
         
+        .social-media{
+            vertical-align: middle;
+            margin: auto 0;
+            
+            &::after{
+                content: '';
+                clear: both;
+                display: block;
+            }
+
+            .social-media-link{
+                float: left;
+                width: 33.33%;
+                margin: auto;
+                padding-left: 20px;
+
+                img{
+                    height: 25px;
+                }
+            }
+        }
     }
+
+
+    // background-image: linear-gradient(rgba(54, 0, 0, 0.5), rgba(73, 20, 20, 0.5)), url("../assets/SandDune.png");
+    // background-repeat: repeat;
+    // background-repeat-x: no-repeat;
+    // background-size: cover;
+    // background-repeat-y: no-repeat;
+    // height: 100vh;
+    // max-height: 720px;
+    // min-height: 667px;
+    
+    // .flex-container{
+    //     padding-top: 100px;
+    //     padding-bottom: 150px;
+    // }
+
+    // .brand-id{
+    //     width: auto;
+    //     text-align: center;
+    //     margin-bottom: 60px;
+    //     img{
+    //         height: 60px;
+    //     }
+    // }
+    
+    // .hero-content-container{
+    //     text-align: center;
+    //     flex-grow: 1;
+    //     color: #ffffff;
+
+    //     .brand-id-text{
+    //         font: 700 18px 'Lato', sans-serif;
+    //         letter-spacing: .7em;
+    //         vertical-align: middle;
+    //         margin-bottom: 100px;
+    //     }
+
+    //     .brand-id-content{
+    //         font: 300 42px 'Nunito', sans-serif;
+    //         width: 60%;
+    //         margin: auto;
+    //     }    
+    // }
+    
+    // .scroll-down-indicator{
+    //     position: absolute;
+    //     bottom: 10px;
+    //     left: 50%;
+    //     animation: 1.3s scroll infinite;
+
+    //     img{    
+    //         height: 30px;
+    //     }
+    // }
 }
+
+@keyframes scroll {
+    0%{
+        bottom: 25px;
+    }
+    25%{
+        bottom: 10px;
+    }
+    30%{
+        bottom: 10px;
+    }
+    100%{
+        bottom: 25px;
+    }
+  }
 
 @media screen and (max-width: 900px) {
     .hero-section{
