--- a/css/main.scss
+++ b/css/main.scss
@@ -15,18 +15,16 @@ body{
 }
 
 .hero-section{
-
-
     .nav-bar{
         width: 100%;
         height: 50px;
         display: flex;
-        text-align: right;
+        text-align: center;
         padding: 40px 0;
 
         .nav-links{
             vertical-align: middle;
-            width: 40%;
+            width: 50%;
             margin: auto;
             &::after{
                 content: '';
@@ -34,18 +32,60 @@ body{
                 display: block;
             }
             .link{
-                float: left;;
+                float: left;
                 width: 25%;
-
+                height: 40px;
+                position: relative;
+                
+                .active-border{
+                    display: none;
+                    margin: auto;
+                    width: 80%;
+                    position: absolute;
+                    bottom: 0;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    height: 4px;
+                    background: rgb(245, 154, 169);
+                }
+                
+                .active-nav-link + .active-border{
+                    display: block;
+                    animation: 170ms appear 1;
+                }
+                
                 a{
                     text-decoration: none;
                     color: black;
-                    font: 500 18px 'Lato', sans-serif;
+                    font: 500 16px "Lato", sans-serif;
+                    position: relative;
+                    
+                    
+                    .hover-effect{
+                        display: none;
+                        position: absolute;
+                        height: 10px;
+                        width: 80%;
+                        background: rgb(255, 190, 201);
+                        z-index: -1;
+                        left: 0;
+                        bottom: 0;
+                    }
+                    
+                    &:hover{
+                        .hover-effect{
+                            animation: 170ms appear 1;
+                            display: block;
+                            // opacity: .7;
+                        }
+                    }
                 }
             }
         }
         
         .social-media{
+            position: absolute;
+            right: 0;
             vertical-align: middle;
             margin: auto 0;
             
@@ -62,11 +102,15 @@ body{
                 padding-left: 20px;
 
                 img{
-                    height: 25px;
+                    height: 20px;
                 }
             }
         }
+
     }
+
+
+
 
 
     // background-image: linear-gradient(rgba(54, 0, 0, 0.5), rgba(73, 20, 20, 0.5)), url("../assets/SandDune.png");
@@ -123,18 +167,24 @@ body{
     // }
 }
 
-@keyframes scroll {
+
+.content-section{
+    .section{
+        display: none;
+    }
+
+    .show-section{
+        display: block;
+    }
+}
+
+
+@keyframes appear {
     0%{
-        bottom: 25px;
-    }
-    25%{
-        bottom: 10px;
-    }
-    30%{
-        bottom: 10px;
+        width: 0%;
     }
     100%{
-        bottom: 25px;
+        width: 80%;
     }
   }
 
