--- a/css/main.css
+++ b/css/main.css
@@ -7,13 +7,6 @@ body {
   margin: 0;
 }
 
-.section-wrapper {
-  max-width: 1300px;
-  padding: 0 40px;
-  margin: auto;
-  position: relative;
-}
-
 .hero-section .nav-bar {
   width: 100%;
   height: 50px;
@@ -74,7 +67,7 @@ body {
 }
 .hero-section .nav-bar .social-media {
   position: absolute;
-  right: 0;
+  right: 40px;
   vertical-align: middle;
   margin: auto 0;
 }
@@ -98,6 +91,33 @@ body {
 }
 .content-section .show-section {
   display: block;
+}
+.content-section .home-section {
+  width: 100%;
+  padding: 0 30px;
+}
+.content-section .home-section .hero-stripe-container {
+  height: 80vh;
+  background: #d6edf8;
+  position: relative;
+}
+.content-section .home-section .hero-stripe-container .logo-container {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: -30px;
+  background: #f59aa9;
+  width: 60px;
+  height: 80px;
+}
+.content-section .home-section .hero-stripe-container .easter-egg-container {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: -30px;
+  background: #f59aa9;
+  width: 60px;
+  height: 80px;
 }
 
 @keyframes appear {
