--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ body {
 
 .section-wrapper {
   max-width: 1300px;
+  width: 100%;
   padding: 0 30px;
   margin: auto;
   position: relative;
@@ -204,10 +205,199 @@ body {
   max-width: 700px;
   margin: auto;
 }
+.content-section .profile-section .profile-cards-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: -100px;
+  padding-bottom: 100px;
+}
+.content-section .profile-section .profile-cards-container .card-container {
+  width: 30%;
+  padding: 0 10px;
+}
 .content-section .profile-section .profile-cards-container .card {
+  padding: 30px;
   border-radius: 6px;
   background: white;
-  background: white;
+  text-align: center;
+  box-shadow: 0 2px 7px #00000024;
+  height: 666px;
+  transition: 170ms ease-in;
+}
+.content-section .profile-section .profile-cards-container .card:hover {
+  box-shadow: 0 2px 10px 1px #00000024;
+}
+.content-section .profile-section .profile-cards-container .card .top-icon {
+  height: 60px;
+  margin: auto;
+  margin-bottom: 20px;
+}
+.content-section .profile-section .profile-cards-container .card .card-header {
+  font: 500 18px "Nunito", sans-serif;
+  margin-bottom: 15px;
+}
+.content-section .profile-section .profile-cards-container .card .card-text {
+  font: 400 15px/1.7 "Roboto", sans-serif;
+  color: #444;
+  margin-bottom: 30px;
+}
+.content-section .profile-section .profile-cards-container .card .card-subtitle {
+  font: 500 17px "Nunito", sans-serif;
+  margin-bottom: 15px;
+  color: #9056ff;
+}
+.content-section .profile-section .profile-cards-container .card .card-special-text {
+  font: 400 16px/1.7 "Lato", sans-serif;
+  color: #444;
+  margin-bottom: 30px;
+}
+.content-section .profile-section .profile-cards-container .card .card-special-text ul {
+  padding: 0;
+  list-style: none;
+}
+.content-section .profile-section .profile-cards-container .card .card-special-text ul li:not(:last-child) {
+  margin-bottom: 5px;
+}
+.content-section .recent-work-section {
+  width: 100%;
+  padding: 100px 0;
+}
+.content-section .recent-work-section .text-container {
+  margin-bottom: 60px;
+  text-align: center;
+}
+.content-section .recent-work-section .title {
+  font: 500 28px "Nunito", sans-serif;
+  margin-bottom: 20px;
+}
+.content-section .recent-work-section .text {
+  font: 400 17px/1.7 "Roboto", sans-serif;
+}
+.content-section .recent-work-section .text a {
+  text-decoration: none;
+  color: #9056ff;
+}
+.content-section .recent-work-section .work-collection-container .work-collection-row {
+  display: flex;
+  width: 70%;
+  max-width: 868px;
+  margin: auto;
+}
+.content-section .recent-work-section .work-collection-container .work-collection-row .work {
+  width: 33.33%;
+  height: 200px;
+  padding: 10px;
+}
+.content-section .recent-work-section .work-collection-container .work-collection-row .work > div {
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  text-align: center;
+  position: relative;
+  transition: 270ms ease-in;
+}
+.content-section .recent-work-section .work-collection-container .work-collection-row .work > div:hover {
+  box-shadow: 0 2px 17px 1px #00000024;
+}
+.content-section .recent-work-section .work-collection-container .work-collection-row .work > div:hover .work-text-container {
+  opacity: 1;
+}
+.content-section .recent-work-section .work-collection-container .work-collection-row .work > div:hover .work-big-title {
+  opacity: 0;
+}
+.content-section .recent-work-section .work-collection-container .work-collection-row .work .work-big-title {
+  opacity: 1;
+  transition: 300ms ease-in;
+  position: absolute;
+  color: #f1f1f1;
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  transform: translate(-50%, -50%);
+  width: 85%;
+  margin: auto;
+  font: 500 24px "Nunito", sans-serif;
+}
+.content-section .recent-work-section .work-collection-container .work-collection-row .work .work-text-container {
+  opacity: 0;
+  transition: 600ms ease-out;
+  text-align: center;
+  position: absolute;
+  color: #f1f1f1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 85%;
+}
+.content-section .recent-work-section .work-collection-container .work-collection-row .work .work-title {
+  font: 500 17px "Nunito", sans-serif;
+  margin-bottom: 10px;
+}
+.content-section .recent-work-section .work-collection-container .work-collection-row .work .work-tools {
+  font: 400 13px "Roboto", sans-serif;
+  margin-bottom: 35px;
+}
+.content-section .recent-work-section .work-collection-container .work-collection-row .work .work-goto {
+  font: 400 15px "Nunito", sans-serif;
+  padding: 5px 20px;
+  position: relative;
+  color: white;
+  text-decoration: none;
+  border: 2px solid #9056ff;
+  border-radius: 20px;
+  transition: 250ms ease-in-out;
+}
+.content-section .recent-work-section .work-collection-container .work-collection-row .work .work-goto:hover {
+  background: #9056ff;
+}
+.content-section .recent-work-section .work-collection-container .work-collection-row .w-1 {
+  background: linear-gradient(to right, #1488cc, #2b32b2);
+}
+.content-section .recent-work-section .work-collection-container .work-collection-row .w-2 {
+  background: linear-gradient(to right, #a770ef, #cf8bf3, #fdb99b);
+}
+.content-section .recent-work-section .work-collection-container .work-collection-row .w-3 {
+  background: linear-gradient(to right, #ff7e5f, #feb47b);
+}
+.content-section .recent-work-section .work-collection-container .work-collection-row .w-4 {
+  background: linear-gradient(to right, #11998e, #38ef7d);
+}
+.content-section .recent-work-section .work-collection-container .work-collection-row .w-5 {
+  background: linear-gradient(to left, #403a3e, #be5869);
+}
+.content-section .recent-work-section .work-collection-container .work-collection-row .w-6 {
+  background: linear-gradient(to left, #aa4b6b, #6b6b83, #3b8d99);
+}
+.content-section .recent-work-section .see-all-button-container {
+  width: 100%;
+  text-align: center;
+  padding-top: 100px;
+}
+.content-section .recent-work-section .see-all-button {
+  padding: 10px 30px;
+  font: 500 17px "Nunito", sans-serif;
+  position: relative;
+  color: #9056ff;
+  text-decoration: none;
+  border: 2px solid #9056ff;
+  border-radius: 30px;
+  transition: 200ms ease-in-out;
+  margin: auto;
+}
+.content-section .recent-work-section .see-all-button:hover {
+  background: #9056ff;
+  color: white;
+}
+.content-section .recent-work-section .see-all-button img {
+  height: 20px;
+  display: inline-block;
+  vertical-align: middle;
+}
+.content-section .recent-work-section .see-all-button span {
+  display: inline-block;
+  vertical-align: middle;
 }
 
 @keyframes appear {
