--- a/css/main.scss
+++ b/css/main.scss
@@ -1,7 +1,9 @@
 
 $accent: #5965a5;
+$text-accent: #9056ff;
 $font-1: "Nunito", sans-serif;
 $font-2: "Roboto", sans-serif;
+$font-3: "Lato", sans-serif;
 
 *{
     box-sizing: border-box;
@@ -14,6 +16,7 @@ body{
 
 .section-wrapper{
     max-width: 1300px;
+    width: 100%;
     padding: 0 30px;
     margin: auto;
     position: relative;
@@ -64,7 +67,6 @@ body{
                     color: black;
                     font: 500 16px "Lato", sans-serif;
                     position: relative;
-                    
                     
                     .hover-effect{
                         display: none;
@@ -242,12 +244,234 @@ body{
                 }
             }
         }
-
+        
         .profile-cards-container{
+            width: 100%;
+            display: flex;
+            // align-content: center;
+            justify-content: center;
+            margin-top: -100px;
+            padding-bottom: 100px;
+            
+            .card-container{
+                width: 30%;
+                padding: 0 10px;
+            }
+            
             .card{
+                padding: 30px;
                 border-radius: 6px;
                 background: white;
-                background: white;
+                text-align: center;
+                box-shadow: 0 2px 7px #00000024;
+                height: 666px;
+                transition: 170ms ease-in;
+                
+                &:hover{
+                    box-shadow: 0 2px 10px 1px #00000024;
+                }
+                
+                .top-icon{
+                    height: 60px;
+                    margin: auto;
+                    margin-bottom: 20px;
+                }
+                
+                .card-header{
+                    font: 500 18px $font-1;
+                    margin-bottom: 15px;
+                }
+                
+                .card-text{
+                    font: 400 15px/1.7 $font-2;
+                    color: #444;
+                    margin-bottom: 30px;
+                }
+                
+                .card-subtitle{
+                    font: 500 17px $font-1;
+                    margin-bottom: 15px;
+                    color: $text-accent;
+                }
+                
+                .card-special-text{
+                    font: 400 16px/1.7 $font-3;
+                    color: #444;
+                    margin-bottom: 30px;
+
+                    ul{
+                        padding: 0;
+                        list-style: none;
+                        li{
+                            &:not(:last-child){
+                                margin-bottom: 5px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    .recent-work-section{
+        width: 100%;
+        padding: 100px 0;
+
+        .text-container{
+            margin-bottom: 60px;
+            text-align: center;
+        }
+
+        .title{
+            font: 500 28px $font-1;
+            margin-bottom: 20px;
+        }
+        
+        .text{
+            font: 400 17px/1.7 $font-2;
+            a{
+                text-decoration: none;
+                color: $text-accent;
+            }
+        }
+        
+        .work-collection-container{
+            
+            .work-collection-row{
+                display: flex;
+                width: 70%;
+                max-width: 868px;
+                margin: auto;
+                
+                .work{
+                    width: 33.33%;
+                    height: 200px;
+                    padding: 10px;
+                    > div{
+                        border-radius: 10px;
+                        width: 100%;
+                        height: 100%;
+                        padding: 20px;
+                        text-align: center;
+                        position: relative;
+                        transition: 270ms ease-in;
+                        &:hover{
+                            box-shadow: 0 2px 17px 1px #00000024;
+                            .work-text-container{
+                                opacity: 1;
+                            }
+                            .work-big-title{
+                                opacity: 0;
+                            }
+                        }
+                    }
+
+                    .work-big-title{
+                        opacity: 1;
+                        // transition-delay: 10ms;
+                        transition: 300ms ease-in;
+                        position: absolute;
+                        color: rgb(241, 241, 241);
+                        top: 50%;
+                        left: 50%;
+                        text-align: center;
+                        transform: translate(-50%, -50%);
+                        width: 85%;
+                        margin: auto;
+                        font: 500 24px $font-1;
+                    }
+                    
+                    .work-text-container{
+                        opacity: 0;
+                        transition: 600ms ease-out;
+                        text-align: center;
+                        position: absolute;
+                        color: rgb(241, 241, 241);
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);
+                        width: 85%;
+                    }
+                    
+                    .work-title{
+                        font: 500 17px $font-1;
+                        margin-bottom: 10px;
+                    }
+
+                    .work-tools{
+                        font: 400 13px $font-2;
+                        margin-bottom: 35px;
+                    }
+
+                    .work-goto{
+                        font: 400 15px $font-1;
+                        padding: 5px 20px;
+                        position: relative;
+                        color: white;
+                        text-decoration: none;
+                        border: 2px solid $text-accent;
+                        border-radius: 20px;
+                        transition: 250ms ease-in-out;
+                        &:hover{
+                            background: $text-accent;
+                        }
+                    }
+                }
+                
+                .w-1{
+                    background: linear-gradient(to right, #1488cc, #2b32b2);
+
+                }
+                .w-2{
+                    background: linear-gradient(to right, #a770ef, #cf8bf3, #fdb99b);
+                }
+                .w-3{
+                    background: linear-gradient(to right, #ff7e5f, #feb47b);
+                }
+                .w-4{
+                    background: linear-gradient(to right, #11998e, #38ef7d);
+                }
+                .w-5{
+                    background: linear-gradient(to left, #403a3e, #be5869);
+                }
+                .w-6{
+                    background: linear-gradient(to left, #aa4b6b, #6b6b83, #3b8d99);
+                }
+                
+            }
+            
+        }
+        
+        .see-all-button-container{
+            width: 100%;
+            text-align: center;
+            padding-top: 100px;
+        }
+
+        .see-all-button{
+            padding: 10px 30px;
+            font: 500 17px $font-1;
+            position: relative;
+            color: $text-accent;
+            text-decoration: none;
+            border: 2px solid $text-accent;
+            border-radius: 30px;
+            transition: 200ms ease-in-out;
+            margin: auto;
+            &:hover{
+                background: $text-accent;
+                color: white;
+            }
+
+            img{
+                height: 20px;
+                display: inline-block;
+                vertical-align: middle;
+            }
+            
+            span{
+                display: inline-block;
+                vertical-align: middle;
             }
         }
     }
